--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,6 +1,9 @@
 ---
 import { Image } from "astro:assets";
 import logo from "../images/logo.png";
+import { SITE_TITLE, SITE_DESCRIPTION } from "../constants";
+
+const { title = "Articles, Stories & Tutorials for Tech People" } = Astro.props;
 ---
 
 <!doctype html>
@@ -8,12 +11,13 @@ import logo from "../images/logo.png";
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content={SITE_DESCRIPTION} />
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.js"
       integrity="sha512-BJ/5sR2hFxQTKin/55JQCcMTObShDBAmVjL/3NR/MVcrhyOazJjAgvROem03+HYyGw16SVdSfoWCFGr9syxAKA=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"></script>
-    <title>Tech People Blog</title>
+    <title>{SITE_TITLE} - {title}</title>
   </head>
   <body class="">
     <nav class="bg-gray-900 text-white">
