Turned article cards into a component

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -3,6 +3,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../constants";
 import Navbar from "../components/Navbar.astro";
 import Footer from "../components/Footer.astro";
 
+// Define the props for the MainLayout component
 const { title = "Articles, Stories & Tutorials for Tech People" } = Astro.props;
 interface Props {
   title?: string;
