fix: Image alt accessiblity

--- a/src/components/MostRecentArticle.astro
+++ b/src/components/MostRecentArticle.astro
@@ -13,7 +13,7 @@ interface Props {
   <a href={`/articles/${article.slug}`}>
     <img
       src={`/images/${article.data.image}`}
-      alt="Article Image"
+      alt={`${article.data.title} Article`}
       class="w-full h-auto rounded-2xl"
     />
 
