--- a/src/components/ArticleCard.astro
+++ b/src/components/ArticleCard.astro
@@ -14,7 +14,7 @@ interface Props {
     <a href={`/articles/${article.slug}`}>
       <img
         src={`/images/${article.data.image}`}
-        alt="Article Image"
+        alt={`${article.data.title} Article`}
         class="w-full h-48 object-cover hover:opacity-75 transition duration-300 ease-in-out"
       />
     </a>
