--- a/src/pages/articles/search.astro
+++ b/src/pages/articles/search.astro
@@ -6,8 +6,9 @@ import SearchForm from "../../components/SearchForm.astro";
 import { getCollection } from "astro:content";
 import type { CollectionEntry } from "astro:content";
 
+// This is the SSR implementation of the search page
+// Check api/search.json.ts for the SSG implementation
 const query: string | null = Astro.url.searchParams.get("query");
-
 const allBlogArticles: CollectionEntry<"blog">[] = await getCollection("blog");
 
 // Filter articles based on the query
