Added functional pagination component

--- a/src/pages/articles/index.astro
+++ b/src/pages/articles/index.astro
@@ -2,9 +2,15 @@
 import MainLayout from "../../layouts/MainLayout.astro";
 import SearchForm from "../../components/SearchForm.astro";
 import ArticleCard from "../../components/ArticleCard.astro";
+import Pagination from "../../components/Pagination.astro";
+import { ARTICLES_PER_PAGE } from "../../constants";
 
 import { getCollection } from "astro:content";
 import type { CollectionEntry } from "astro:content";
+
+// Convert string to number by adding "+" before the variable
+// Adding "!" to the end of the variable tells TypeScript that the variable is not null
+const currentPage: number | null = +Astro.url.searchParams.get("page")! || 1;
 
 // Get all blog articles
 // Sort by pubDate in descending order
@@ -13,6 +19,17 @@ const allBlogArticles: CollectionEntry<"blog">[] = (
 ).sort(
   (a: CollectionEntry<"blog">, b: CollectionEntry<"blog">) =>
     b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
+);
+
+// Calculate total number of pages
+const totalPages: number = Math.ceil(
+  allBlogArticles.length / ARTICLES_PER_PAGE
+);
+
+// Get articles for the current page
+const articlesforPage: CollectionEntry<"blog">[] = allBlogArticles.slice(
+  (currentPage - 1) * ARTICLES_PER_PAGE,
+  currentPage * ARTICLES_PER_PAGE
 );
 ---
 
@@ -23,22 +40,14 @@ const allBlogArticles: CollectionEntry<"blog">[] = (
   <!-- Main Grid -->
   <div class="grid grid-cols-1 gap-4 sm:grid-cols-2 lg:grid-cols-3">
     <!-- Article Card -->
-    {allBlogArticles.map((article) => <ArticleCard article={article} />)}
+    {articlesforPage.map((article) => <ArticleCard article={article} />)}
   </div>
 
   <!-- Pagination -->
-  <div class="flex justify-between mt-10">
-    <a
-      href="#"
-      class="inline-block bg-indigo-100 px-3 py-2 hover:bg-indigo-600 hover:text-white rounded-lg"
-    >
-      Previous
-    </a>
-    <a
-      href="#"
-      class="inline-block bg-indigo-100 px-3 py-2 hover:bg-indigo-600 hover:text-white rounded-lg"
-    >
-      Next
-    </a>
-  </div>
+  <Pagination
+    currentPage={currentPage}
+    totalPages={totalPages}
+    disablePrevious={currentPage === 1}
+    disableNext={currentPage === totalPages}
+  />
 </MainLayout>
